tests/snapshots/generate_tree__package_bin__fail__virtual_workspace_single_package_multi_target.snap
---
source: tests/generate_tree.rs
expression: output
---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:

